# pirel

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
pirel/: __init__.py  _cache.py  _guess.py  cli.py  python_cli.py  releases.py
pyrecycle/: cli.py
tests/: test_cli.py
